--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "File Manager",
-  "name": "File Manager",
+  "short_name": "Hacksaw Authentication",
+  "name": "Hacksaw Authentication",
   "icons": [
     {
       "src": "favicon.svg",
