--- a/package.json
+++ b/package.json
@@ -54,5 +54,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://entespotify.github.io/hacksaw-auth"
 }
