--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/jest": "^30.0.0"
+    "@types/jest": "^30.0.0",
+    "gh-pages": "^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "npx gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
