--- a/.github/workflows/deploy-artifacts.yml
+++ b/.github/workflows/deploy-artifacts.yml
@@ -51,22 +51,32 @@ jobs:
 
       - name: Upload JS
         run: |
-          RESPONSE=$(curl -s -w "%{http_code}" -o script_upload.json -X POST "https://www.pythonanywhere.com/api/v0/user/${{ vars.CONSOLE_USER_ID }}/files/path/home/${{ vars.CONSOLE_USER_ID }}/resources/v${{ steps.get_version.outputs.version }}/script.js" \
+          RESPONSE=$(curl -s -w "%{http_code}" \
+            -o script_upload.json \
+            -X POST "https://www.pythonanywhere.com/api/v0/user/${{ vars.CONSOLE_USER_ID }}/files/path/home/${{ vars.CONSOLE_USER_ID }}/resources/v${{ steps.get_version.outputs.version }}/script.js" \
             -H "Authorization: Token ${{ secrets.CONSOLE_API_KEY }}" \
             -H "Content-Type: multipart/form-data" \
-            -F "content=@upload/script.js;type=application/javascript"
+            -F "content=@upload/script.js;type=application/javascript")
           if [ "$RESPONSE" -ne 201 ]; then
             echo "Script upload step failed (status $RESPONSE)"
+            cat script_upload.json
+          else
+            echo "Script uploaded successfully"
             cat script_upload.json
           fi
 
       - name: Upload CSS
         run: |
-          RESPONSE=$(curl -s -w "%{http_code}" -o script_upload.json -X POST "https://www.pythonanywhere.com/api/v0/user/${{ vars.CONSOLE_USER_ID }}/files/path/home/${{ vars.CONSOLE_USER_ID }}/resources/v${{ steps.get_version.outputs.version }}/styles.css" \
+          RESPONSE=$(curl -s -w "%{http_code}" \
+            -o styles_upload.json \
+            -X POST "https://www.pythonanywhere.com/api/v0/user/${{ vars.CONSOLE_USER_ID }}/files/path/home/${{ vars.CONSOLE_USER_ID }}/resources/v${{ steps.get_version.outputs.version }}/styles.css" \
             -H "Authorization: Token ${{ secrets.CONSOLE_API_KEY }}" \
             -H "Content-Type: multipart/form-data" \
-            -F "content=@upload/styles.css;type=text/css"
+            -F "content=@upload/styles.css;type=text/css")
           if [ "$RESPONSE" -ne 201 ]; then
-            echo "Script upload step failed (status $RESPONSE)"
-            cat script_upload.json
+            echo "Styles upload step failed (status $RESPONSE)"
+            cat styles_upload.json
+          else
+            echo "Styles uploaded successfully"
+            cat styles_upload.json
           fi
