Initializing sso login functionality

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hacksaw-auth",
+  "name": "hacksaw-auth-sso",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
@@ -57,6 +57,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://entespotify.github.io/hacksaw-auth"
+  }
 }
